# wiki-llm

./: CLAUDE.md  README.md  pyproject.toml  server.py
spec/: spec-v1.md
src/wiki_llm/: config.py  exceptions.py  main.py
src/wiki_llm/extractors/: dispatcher.py  html.py  markdown.py  pdf.py  plaintext.py
src/wiki_llm/indexing/: __init__.py  bm25.py  embeddings.py  hybrid.py
src/wiki_llm/llm/: client.py
src/wiki_llm/tools/: ingest.py
src/wiki_llm/wiki/: catalog.py  log.py  reader.py  writer.py
tests/: test_bm25.py  test_catalog.py  test_config.py  test_embeddings.py  test_exceptions.py  test_extractors.py  test_hybrid.py  test_ingest.py  test_llm_client.py  test_log.py  test_reader.py  test_writer.py
tests/extractors/: test_extractors.py
tests/wiki/: test_reader.py  test_writer.py
