[project]
name = "wiki-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vpovarna", email = "vlad.povarna@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.13.1",
]

[project.scripts]
wiki-llm = "wiki_llm.main:main"

[tool.uv.build-backend]
source-include = ["src"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
