[project]
name = "wiki-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vpovarna", email = "vlad.povarna@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "fastapi>=0.115.0",
    "faiss-cpu>=1.9.0",
    "mcp>=1.0.0",
    "markdownify>=1.2.2",
    "numpy>=2.4.4",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "python-frontmatter>=1.1.0",
    "sentence-transformers>=5.4.1",
]

[project.scripts]
wiki-llm = "wiki_llm.main:main"

[tool.uv.build-backend]
source-include = ["src"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 88
src = ["src"]
